[package]
name = "concurrency-fuzz-scheduler"
version = "0.1.0"
edition = "2021"
description = "Rust port of https://github.com/parttimenerd/concurrency-fuzz-scheduler: a scheduler that produces random scheduling edge cases to fuzz concurrent applications. Implemented as an in-kernel sched_ext scheduler (BPF) with a thin Rust loader, so the scheduling decision never leaves the kernel."
repository = "https://github.com/nkaretnikov/concurrency-fuzz-scheduler-rs.git"
license = "GPL-2.0-only"

[[bin]]
name = "concurrency-fuzz-scheduler"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }
libbpf-rs = "=0.26.2"
libc = "0.2"
plain = "0.2"
scx_utils = "1.1"

[build-dependencies]
scx_cargo = "1.1"

[profile.release]
lto = true
codegen-units = 1
